<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/uploadtitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/chooseFilebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100dp"
        android:text="@string/selectfile" />

    <TextView
        android:id="@+id/textSelectedFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chooseFilebtn"
        android:layout_alignBottom="@+id/chooseFilebtn"
        android:layout_toLeftOf="@+id/chooseFilebtn"
        android:text="@string/selectedfiletext" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:text="@string/uploadButton" />

    <TextView
        android:id="@+id/textViewUpload2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chooseFilebtn"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="32dp"
        android:text="@string/uploadTextHint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewUpload2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextDescription"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="17dp"
        android:text="@string/descriptionTextHint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>